--- a/swappme-dex-app/src/App.css
+++ b/swappme-dex-app/src/App.css
@@ -2,8 +2,117 @@
   text-align: center;
 }
 
+/* Ocultar el overflow del cuerpo */
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Desactivar desbordamiento horizontal */
+}
 
+/* Estilo del div transparente en el centro */
+.center-box {
+  position: absolute;
+  top: 47%; /* Espacio para el header */
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  width: 100%;
+  max-width: 90%;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.212);
+  border-radius: 10px;
+  text-align: left;
+  color: white;
+  z-index: 2; /* Asegura que esté por encima de las estrellas */
+  display: flex;
+  flex-direction: column; /* Los elementos se alinean en columnas */
+  justify-content: flex-start;
+  align-items: center;
+}
 
+/* Estilo para la palabra DEX */
+.dex-title {
+  font-size: 24px;
+  font-weight: bolder;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: left;
+  margin: 0;
+  width: 100%;
+  padding: 0px 0px 10px 0px;
+}
 
+/* Contenedor de los paneles (divs) */
+.boxes-container {
+  display: flex;
+  flex-wrap: wrap; /* Permite que los paneles se ajusten */
+  justify-content: space-between; /* Espacio entre los paneles */
+  gap: 20px;
+  width: 100%;
+  height: auto; /* Ajusta la altura automáticamente */
+}
 
+/* Estilo para cada panel-box */
+.panel-box {
+  padding: 20px;
+  background-color: rgb(23, 23, 33);
+  border-radius: 2px;
+  text-align: left;
+  width: 23%; /* Los divs ocuparán un 30% del ancho */
+  min-width: 250px; /* Asegura que cada div no sea demasiado pequeño */
+  box-sizing: border-box; /* Asegura que los bordes no rompan el tamaño */
+}
 
+.panel-box input {
+  border-radius: 2px;
+  padding: 10px 10px;
+  width: 90%;
+  margin-top: 20px;
+  background-color: #333;
+  border: 0.2px solid #ffffff00; /* Borde blanco */
+  color: white;
+}
+/* Botón Convert similar al de Connect Wallet */
+.convert-button {
+  margin-top: 20px;
+  background-color: rgba(214, 13, 170, 0.966); /* Fondo cuando está conectado */
+  color: white; /* Color de texto */
+  border: 0.2px solid #ffffffb6; /* Borde blanco */
+  border-radius: 1px;
+  padding: 10px 10px;
+  width: 98%;
+  margin-right: 20px;
+  cursor: pointer;
+  font-size: 12px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase; /* Hacer texto en mayúsculas */
+}
+
+/* Efecto hover */
+.convert-button:hover {
+  background-color: #5feb66;
+  transform: translateY(-2px); /* Desplazamiento hacia arriba al pasar el mouse */
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  .center-box {
+    width: 90%; /* Aumenta el ancho en pantallas pequeñas */
+    height: auto; /* Ajusta la altura */
+  }
+
+  .boxes-container {
+    flex-direction: column; /* Los divs estarán uno encima del otro */
+    gap: 10px; /* Espacio entre los divs */
+    width: 100%;
+  }
+
+  .panel-box {
+    width: 100%; /* Los divs ocupan el 100% del ancho en pantallas pequeñas */
+  }
+}
